--- a/cs-index.html
+++ b/cs-index.html
@@ -122,7 +122,7 @@
             <div class="panel panel-default"  style="background-color: rgb(89, 171,227)">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                  <a href="cs-index.html">Quản lý nhà thuê</a>
+                  <a href="cs-index.html">Quản lý nhà thuê 1</a>
                 </h4>
               </div>
             </div>
