--- a/cs-baocao.html
+++ b/cs-baocao.html
@@ -124,7 +124,7 @@
         <!-- Start Quan ly Menu -->
         <div class="col-md-3">
           <div class="panel-group">
-            <div class="panel panel-default"  style="background-color: rgb(89, 171,227)">
+            <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title"> <a class="active" href="cs-index.html">Quản lý nhà đang thuê</a> </h4>
               </div>
